feat(device) detect brand Doogee model: Ibiza F2 feat(device) detect brand Vivax model: Point X1 feat(device) detect brand Mediacom models: PhonePad Duo S5 (M-PPxS5), PhonePad Duo G4 (M-PPAG4),  PhonePad Duo S7 (M-PPxS7), PhonePad Duo S7P (M-PPxS7P), SmartPad 10.1" HX HD (M-SP10HXxH),  SmartPad 10.1" MX (M-SP10MXHA), SmartPad 10.1" MX Lite (M-SP10MXHL), SmartPad HX 7.0" (M-SP7HXAH),  SmartPad 10.1" iPro 3G (M-SP7xGO3G)
chore: rename model names for brand Mediacom (added prefix to screen size)

--- a/Tests/fixtures/smartphone-19.yml
+++ b/Tests/fixtures/smartphone-19.yml
@@ -536,7 +536,7 @@
   device:
     type: tablet
     brand: Mediacom
-    model: SmartPad MX 8
+    model: SmartPad MX 8.0"
   os_family: Android
   browser_family: Chrome
 -
@@ -554,7 +554,7 @@
   device:
     type: tablet
     brand: Mediacom
-    model: SmartPad HX 8 HD
+    model: SmartPad HX 8.0" HD
   os_family: Android
   browser_family: Chrome
 -
