--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4377,7 +4377,7 @@ DoCoMo:
 
 # Doogee
 Doogee:
-  regex: 'DOOGEE[ _-]|Valencia2_Y100_?(?:pro|plus)|Y100_Plus|X5max(?:[_ ]PRO)?|Shoot_[12]|x5_doogee|(KISSME|BIGBOY|COLLO[23]?|DAGGER|DISCOVERY2?|FIND|HOTWIND|LATTE|MAX|MINT|MOON|PIXELS|RAINBOX|TURBO|VALENCIA|VOYAGER2?|TITANS2?)[ -_](DG[0-9]+C?)(?:[);/ ]|$)|BL[579]000(?:[);/ ]|$)|BL12000|BL5500[_ ]Lite|X9 Mini|LEO_DG280|Y9Plus|Hitman_DG850|S(?:68|9[05])Pro|S40Lite|(?<!Lenovo )S90C'
+  regex: 'DOOGEE[ _-]|Valencia2_Y100_?(?:pro|plus)|Y100_Plus|X5max(?:[_ ]PRO)?|Shoot_[12]|x5_doogee|(KISSME|BIGBOY|COLLO[23]?|DAGGER|DISCOVERY2?|FIND|HOTWIND|LATTE|MAX|MINT|MOON|PIXELS|RAINBOX|TURBO|VALENCIA|VOYAGER2?|TITANS2?)[ -_](DG[0-9]+C?)(?:[);/ ]|$)|BL[579]000(?:[);/ ]|$)|BL12000|BL5500[_ ]Lite|X9 Mini|LEO_DG280|Y9Plus|Hitman_DG850|S(?:68|9[05])Pro|S40Lite|(?<!Lenovo )S90C|Ibiza_F2'
   device: 'smartphone'
   models:
     - regex: '(?:Valencia2_)?Y100_Plus(?:[);/ ]|$)'
@@ -4408,6 +4408,8 @@ Doogee:
       model: 'X5'
     - regex: 'Shoot_([12])'
       model: 'Shoot $1'
+    - regex: 'Ibiza_F2'
+      model: 'Ibiza F2'
     - regex: '(X5max(?:[_ ]PRO)?)'
       model: '$1'
     - regex: '(?:DOOGEE[ _-])?(BIGBOY|COLLO[23]?|DAGGER|DISCOVERY2?|FIND|HOTWIND|LATTE|MAX|MINT|MOON|PIXELS|RAINBOX|TURBO|VALENCIA|Valencia2_Y100pro|VOYAGER2?|TITANS2?)[ -_](DG[0-9]+C?)(?:[);/ ]|$)'
@@ -9317,7 +9319,7 @@ Maze:
     - regex: 'Maze Alpha(?:[);/ ]|$)'
       model: 'Alpha'
 
-# Mediacom
+# Mediacom (mediacomeurope.it)
 Mediacom:
   regex: '(?:SmartPad7503G|M-SP10MXA|M-PPAB500|SmartPad970s2(?:3G)?|M[_-][MPS]P[0-9a-z]+|M-IPRO[0-9a-z]+|1AEC)(?:[);/ ]|$)'
   device: 'tablet'
@@ -9329,59 +9331,69 @@ Mediacom:
     - regex: 'SmartPad970s2(?:[);/ ]|$)'
       model: 'SmartPad 970 S2'
     - regex: 'M-MP84[02]M(?:[);/ ]|$)'
-      model: 'SmartPad 8.0 Mobile'
+      model: 'SmartPad 8.0" Mobile'
     - regex: 'M-MP940M(?:[);/ ]|$)'
-      model: 'SmartPad 9.7 Mobile'
+      model: 'SmartPad 9.7" Mobile'
     - regex: 'M-SP10MXA(?:[);/ ]|$)'
-      model: 'SmartPad MX 10'
+      model: 'SmartPad MX 10.1"'
     - regex: 'M-SP8MXA(?:[);/ ]|$)'
-      model: 'SmartPad MX 8'
+      model: 'SmartPad MX 8.0"'
+    - regex: 'M-SP7HXAH(?:[);/ ]|$)'
+      model: 'SmartPad HX 7.0"'
     - regex: 'M-SP8HXAH(?:[);/ ]|$)'
-      model: 'SmartPad HX 8 HD'
+      model: 'SmartPad HX 8.0" HD'
     - regex: 'M-MP(?:710|720|725|726|740)GOx?(?:[);/ ]|$)'
-      model: 'SmartPad 7.0 Go'
+      model: 'SmartPad 7.0" Go'
     - regex: 'M-MP876S2(?:[);/ ]|$)'
-      model: 'SmartPad 8.0 S2'
+      model: 'SmartPad 8.0" S2'
     - regex: 'M-MP8S2[AB]?3G(?:[);/ ]|$)'
-      model: 'SmartPad 8.0 S2 3G'
+      model: 'SmartPad 8.0" S2 3G'
     - regex: 'M-MP(101|102|860|875)S2[BW]?(?:[);/ ]|$)'
       model: 'SmartPad $1 S2'
     - regex: 'M-MP85S23G(?:[);/ ]|$)'
       model: 'SmartPad 875 S2 3G'
     - regex: 'M-SP1AGO3G'
       model: 'SmartPad 10 Go 3G'
+    - regex: 'M-SP7xGO3G'
+      model: 'SmartPad 10.1" iPro 3G'
     - regex: '1AEC'
       model: 'SmartPad 10 Eclipse'
     - regex: 'M-MP10[45][01]S2(?:[);/ ]|$)'
-      model: 'SmartPad 10.1 S2'
+      model: 'SmartPad 10.1" S2'
     - regex: 'M-MP1S2[AB]3G(?:[);/ ]|$)'
-      model: 'SmartPad 10.1 S2 3G'
+      model: 'SmartPad 10.1" S2 3G'
     - regex: 'M-MP8[24]S4(?:[);/ ]|$)'
-      model: 'SmartPad 8.0 S4'
+      model: 'SmartPad 8.0" S4'
     - regex: 'M-MP8S4[AB]3G(?:[);/ ]|$)'
-      model: 'SmartPad 8.0 S4 3G'
+      model: 'SmartPad 8.0" S4 3G'
     - regex: 'M-MP9S4A3G(?:[);/ ]|$)'
-      model: 'SmartPad 9.7 S4 3G'
+      model: 'SmartPad 9.7" S4 3G'
     - regex: 'M-MP1[02]S4(?:[);/ ]|$)'
-      model: 'SmartPad 10.1 S4'
+      model: 'SmartPad 10.1" S4'
     - regex: 'M-MP1040MC?(?:[);/ ]|$)'
-      model: 'SmartPad 10.1 HD S4 3G'
+      model: 'SmartPad 10.1" HD S4 3G'
     - regex: 'M-MP1S4[AB]3G(?:[);/ ]|$)'
-      model: 'SmartPad 10.1 S4 3G'
+      model: 'SmartPad 10.1" S4 3G'
+    - regex: 'M-SP10HXxH(?:[);/ ]|$)'
+      model: 'SmartPad 10.1" HX HD'
+    - regex: 'M-SP10MXHA(?:[);/ ]|$)'
+      model: 'SmartPad 10.1" MX'
+    - regex: 'M-SP10MXHL(?:[);/ ]|$)'
+      model: 'SmartPad 10.1" MX Lite'
     - regex: 'M-MP8PA3G(?:[);/ ]|$)'
-      model: 'SmartPad 8.0 HD Pro 3G'
+      model: 'SmartPad 8.0" HD Pro 3G'
     - regex: 'M-MP10PA(?:[);/ ]|$)'
-      model: 'SmartPad 10.1 HD Pro'
+      model: 'SmartPad 10.1" HD Pro'
     - regex: 'M-MP10PA3G(?:[);/ ]|$)'
-      model: 'SmartPad 10.1 HD Pro 3G'
+      model: 'SmartPad 10.1" HD Pro 3G'
     - regex: 'M-IPRO([18][01]0)[BW](?:[);/ ]|$)'
-      model: 'SmartPad 8.0 HD iPro$1 3G'
+      model: 'SmartPad 8.0" HD iPro$1 3G'
 
     - regex: '(?:M-MP75S23G|M-MP72[01]M)(?:[);/ ]|$)'
-      model: 'SmartPad 7.0 Mobile'
+      model: 'SmartPad 7.0" Mobile'
       device: 'phablet'
     - regex: 'M-MP7S2[ABDK]3G(?:[);/ ]|$)'
-      model: 'SmartPad 7.0 S2 3G'
+      model: 'SmartPad 7.0" S2 3G'
       device: 'phablet'
     - regex: 'M-MP5303G(?:[);/ ]|$)'
       model: 'SmartPad Mini Mobile'
@@ -9414,6 +9426,9 @@ Mediacom:
       model: 'PhonePad Duo S551U'
       device: 'phablet'
 
+    - regex: 'M-PPAG4(?:[);/ ]|$)'
+      model: 'PhonePad Duo G4'
+      device: 'smartphone'
     - regex: 'M-PP[ABC]G500(?:[);/ ]|$)'
       model: 'PhonePad Duo G500'
       device: 'smartphone'
@@ -9426,7 +9441,7 @@ Mediacom:
     - regex: 'M-PPxG(400|501|[457][PM]?)(?:[);/ ]|$)'
       model: 'PhonePad Duo G$1'
       device: 'smartphone'
-    - regex: 'M-PPxS(532[LU]|470|501|5P?)(?:[);/ ]|$)'
+    - regex: 'M-PPxS(532[LU]|470|501|5P?|7P?)(?:[);/ ]|$)'
       model: 'PhonePad Duo S$1'
       device: 'smartphone'
     - regex: 'M-PPxG(450)(?:[);/ ]|$)'
@@ -15852,13 +15867,13 @@ Toshiba:
 
 # Vivax (www.vivax.com)
 Vivax:
-  regex: 'VIVAX|(?:Fly5[_ ]Lite|Fun[_ ]S500|Point_(?:X2|X501)|PRO3|32LE77SM|40LE77SM)(?:[);/ ]|$)'
+  regex: 'VIVAX|(?:Fly5[_ ]Lite|Fun[_ ]S500|Point_(?:X[12]|X501)|PRO3|32LE77SM|40LE77SM)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Fly5[_ ]Lite(?:[);/ ]|$)'
       model: 'Fly 5 Lite'
-    - regex: 'Point_X2'
-      model: 'Point X2'
+    - regex: 'Point_X([12])(?:[);/ ]|$)'
+      model: 'Point X$1'
     - regex: 'Fun[_ ]S500(?:[);/ ]|$)'
       model: 'Fun S500'
     - regex: 'VIVAX[ _]Fly3(?:[);/ ]|$)'
