feat(device) detect brand Sky models: Platinum A55, Platinum A5, Platinum 4.0 Plus, Platinum View, Platinum 5.5C, Platinum A57, Platinum M4 feat(device) detect brand Navon models: Platinum 10.1" 3G V2, Platinum 10.1" 3G feat(device) detect brand Onda model: MID feat(device) detect brand Overmax model: Qualcore 1027 4G feat(device) detect brand Allwinner model: QUAD-CORE T3 K2001M, A33 QUAD-CORE y3 feat(device) detect brand Q-Touch model: QS701 feat(device) detect brand Qilive model: Q9 5.5" 4G (Q9S55IN4G) feat(device) detect brand Q.Bell models: QPHONE 9.2, QPHONE 5.6, Qphone 7.1

--- a/Tests/fixtures/smartphone-17.yml
+++ b/Tests/fixtures/smartphone-17.yml
@@ -9074,7 +9074,7 @@
     engine: Blink
     engine_version: ""
   device:
-    type: smartphone
+    type: tablet
     brand: Navon
     model: Platinum 10.1" 3G
   os_family: Android
