--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9714,7 +9714,7 @@ Mobiola:
 
 # Mobicel or Mobicell
 Mobicel:
-  regex: 'Mobicel_(R1)|(?:HYPE|DANDY|(?<!SMADL )Matrix|TRENDY PLUS|TANGO_LITE|BLINK|BERRY[_ ]?(?:[12]|PLUS))(?:[);/ ]|$)'
+  regex: 'Mobicel_(R1)|(?:HYPE|DANDY(?:_ZAM)?|(?<!SMADL )Matrix|TRENDY PLUS|TANGO_LITE|BLINK|BERRY[_ ]?(?:[12]|PLUS))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Matrix'
@@ -9731,6 +9731,8 @@ Mobicel:
       model: 'Trendy Plus'
     - regex: 'HYPE'
       model: 'Hype'
+    - regex: 'DANDY_ZAM'
+      model: 'Dandy Zam'
     - regex: 'DANDY'
       model: 'Dandy'
     - regex: 'TANGO_LITE'
@@ -10174,6 +10176,12 @@ MyWigo:
   models:
     - regex: 'City3'
       model: 'City 3'
+
+# Myros (myrosworld.com)
+Myros:
+  regex: '(E70 Ultra)(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: '$1'
 
 # Myria
 Myria:
@@ -12982,7 +12990,7 @@ Senwa:
 
 # Sky or Sky Devices (skydevices.com)
 Sky:
-  regex: '(?:SKY|Elite|Fuego)[_ ][3-7]\.[05](?:[A-Z]{1,2})?|Elite_5_5_Octa|Elite[ _](?:M45|GO|M5Plus|T55|T4|B5)|Platinum[_ ](?:5.0M|5\.5C|M5|[ABCM]4|[ACG]55|[ABDEFG]5|A57|P9|X|UNO|VIEW2|O|4_0Plus)|PLATINUMVIEW|SKY[ _](?:55M|Pro_III)'
+  regex: '(?:SKY|Elite|Fuego)[_ ][3-7]\.[05](?:[A-Z]{1,2})?|Elite[ _](?:M45|GO|M5Plus|T55|T[46]|[AB]5|5_5_Octa)|Platinum[_ ](?:5.0M|5\.5C|M5|[ABCM]4|[ACG]55|[ABDEFG]5|A57|P9|X|UNO|VIEW2|O|4_0Plus)|PLATINUMVIEW|SKY[ _](?:55M|Pro_III)'
   device: 'smartphone'
   models:
     - regex: 'Platinum[_ ](?:5\.0M|M5)'
@@ -13002,7 +13010,7 @@ Sky:
       model: 'Elite 5.5 Octa'
     - regex: 'Elite M5Plus'
       model: 'Elite M5 Plus'
-    - regex: 'Elite[ _](M45|Go|T4|T55|B5)(?:[);/ ]|$)'
+    - regex: 'Elite[ _](M45|Go|T[46]|T55|[AB]5)(?:[);/ ]|$)'
       model: 'Elite $1'
     - regex: 'Elite[_ ]([3-7]\.[05](?:[A-Z]{1,2})?\+?)'
       model: 'Elite $1'
@@ -19601,6 +19609,35 @@ Necnot:
  regex: '(M002[DGQK]-2|M002N|M002N-3T|M002W-2T|6M-3T)(?:[);/ ]|$)'
  device: 'tablet'
  model: '$1'
+
+# Einstein
+Einstein:
+ regex: 'Einstein(T3)(?:[);/ ]|$)'
+ device: 'tablet'
+ model: '$1'
+
+# AfriOne (afrione.com)
+AfriOne:
+  regex: '(CYGNUSX?|Gravity Z2|ChampionPro)(?:[);/ ]|$)'
+  device: 'phablet'
+  models:
+    - regex: 'CYGNUSX(?:[);/ ]|$)'
+      model: 'Cygnus X'
+    - regex: 'CYGNUS(?:[);/ ]|$)'
+      model: 'Cygnus'
+
+    - regex: 'Gravity Z2(?:[);/ ]|$)'
+      device: 'smartphone'
+      model: 'Gravity Z2'
+    - regex: 'ChampionPro(?:[);/ ]|$)'
+      device: 'smartphone'
+      model: 'Champion Pro'
+
+# Connex (connexdevices.co.za)
+Connex:
+  regex: '(CTAB1044hn|CTAB-1044)(?:[);/ ]|$)'
+  device: 'tablet'
+  model: '$1'
 
 # Eagle (eagleuhd.com)
 Eagle:
