feat(os) merge brew regex rules in one rule

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -882,12 +882,9 @@
 ##########
 # Brew
 ##########
-- regex: '(?:Brew(?: MP)?|BMP)(?:[ /](\d+[\.\d]+))'
+- regex: '(?:Brew(?!-Applet)(?: MP)?|BMP)(?:[ /](\d+[\.\d]+))?'
   name: 'Brew'
   version: '$1'
-- regex: 'Brew(?: MP)?|BMP'
-  name: 'Brew'
-  version: ''
 
 ##########
 # Web TV
