feat(device) detect brand Clementoni model: Clempad 8

--- a/Tests/fixtures/smartphone-20.yml
+++ b/Tests/fixtures/smartphone-20.yml
@@ -7455,7 +7455,7 @@
   device:
     type: tablet
     brand: Clementoni
-    model: MFC (2018)
+    model: Clempad (2018)
   os_family: Android
   browser_family: Chrome
 -
@@ -7473,6 +7473,6 @@
   device:
     type: tablet
     brand: Clementoni
-    model: MFC 8
+    model: Clempad 8
   os_family: Android
   browser_family: Chrome
